--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <javafx.version>17.0.2</javafx.version> <!-- Use stable JavaFX version -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+
     <dependencies>
         <!-- JavaFX Controls -->
         <dependency>
@@ -64,6 +66,22 @@
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>3.6.0</version>
+        <configuration>
+            <!-- Use built-in Sun checks -->
+            <configLocation>google_checks.xml</configLocation>
+
+            <consoleOutput>true</consoleOutput>
+            <failsOnError>true</failsOnError>
+        </configuration>
+        <executions>
+            <execution>
+                <phase>verify</phase>
+                <goals>
+                    <goal>check</goal>
+                </goals>
+            </execution>
+        </executions>
     </plugin>
 
 
